[tool.poetry]
name = "muh-language"
version = "0.1.0"
description = ""
authors = ["Alan Tao <alantao912@protonmail.ch>"]
readme = "README.md"
packages = [{include = "muh_language"}]

[tool.poetry.dependencies]
python = "^3.7"
lark = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
